feat: smthng added

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,6 +2,7 @@
   --grey-text: #89898a;
   --dark-bg-900: #202123;
   --dark-bg-700: #464447;
+  --dark-bg-300: #e2e2e2;
   --dark-bg-200: #ebebeb;
   --dark-bg-100: #f6f6f6;
 }
