--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -10,3 +10,46 @@
   justify-content: center;
   align-items: center;
 }
+
+.wrapper {
+  width: 700px;
+  border: 1px solid var(--dark-bg-300);
+  border-radius: 12px;
+  padding: 20px;
+}
+
+.title {
+  text-align: center;
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 12px;
+}
+
+.inputsRow {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 16px;
+}
+
+.input {
+  margin-top: 16px;
+  width: 50%;
+}
+
+.buttonsWrapper {
+  text-align: center;
+}
+
+.orText {
+  margin-top: 6px;
+}
+
+.loginButton {
+  margin-top: 12px;
+}
+
+.button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 6px;
+}
