--- a/src/components/TableUsersItem/TableUsersItem.module.css
+++ b/src/components/TableUsersItem/TableUsersItem.module.css
@@ -5,3 +5,21 @@
 .dark td {
   background-color: var(--dark-bg-100);
 }
+
+.editButtonWrapper {
+  width: 100%;
+  height: 100%;
+}
+
+/* .editButtonСell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+.editButton {
+  width: 150px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 12px;
+}
