--- a/src/components/DocumentsTableItem/DocumentsTableItem.module.css
+++ b/src/components/DocumentsTableItem/DocumentsTableItem.module.css
@@ -9,6 +9,8 @@
 .editButtonWrapper {
   width: 100%;
   height: 100%;
+  display: flex;
+  column-gap: 10px;
 }
 
 /* .editButtonСell {
@@ -22,4 +24,23 @@
   display: block;
   margin: 0 auto;
   margin-top: 12px;
+}
+
+.buttonSvg {
+  width: 24px;
+  height: 24px;
+  fill: #6c757d;
+  transition: all 0.3s;
+}
+
+.deleteSvg:hover {
+  fill: #dc3545;
+}
+
+.downloadSvg:hover {
+  fill: #0d6efd;
+}
+
+.editSvg:hover {
+  fill: #ffc107;
 }
