feat: document filter added

--- a/src/pages/DocumentsPage/DocumentsPage.module.css
+++ b/src/pages/DocumentsPage/DocumentsPage.module.css
@@ -1,3 +1,33 @@
 .createDocumentButton {
   margin-top: 20px;
 }
+
+.searchInput {
+  width: 400px;
+}
+
+.filters {
+  margin-top: 20px;
+  display: flex;
+  column-gap: 12px;
+}
+
+.groupWrapper {
+  width: 180px;
+}
+
+.addGroupWrapper {
+  width: 350px;
+  display: flex;
+}
+
+.countOfFiltersBadge {
+  margin-left: 5px;
+}
+
+.loadingWrapper {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
